TestCases/Errors/range_value/observations/aut_01_obs.spm
 obs   16-5   0.00160881638559674 
 obs   17-5   0.00123955047700593 
 obs   18-5   0.00108754989934832 
 obs   16-6   0.00454266045320856 
 obs   17-6   0.00108302868364397 
 obs   18-6   0.000947879469780163 
 obs   19-6   0.00218818380743982 
 obs   20-6   0 
 obs   16-7   0.00468190503194113 
 obs   17-7   0 
 obs   20-7   0 
 obs   19-11   0 
 obs   18-13   0 
 obs   19-13   0 
 obs   18-14   0 
 obs   19-14   0 
 obs   18-15   0 
 obs   19-15   0 
 obs   8-18   0.00162393162393162 
 obs   9-18   0.000909090909090909 
 obs   12-18   0.0264395424836601 
 obs   8-19   0.00333333333333333 
 obs   9-19   0.00302380952380952 
 obs   10-19   0.0145633074935401 
 obs   11-19   0.0236440045452791 
 obs   12-19   0.01 
 obs   10-20   0.0327485004723137 
 obs   11-20   0.0473187598626195 
 obs   10-22   0.0846666666666667 
 obs   12-22   0.0355 
 obs   10-23   0.0453137254901961 
 error_value   16-5   0 
 error_value   17-5   0 
 error_value   18-5   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   18-6   0 
 error_value   19-6   0 
 error_value   20-6   0 
 error_value   16-7   0 
 error_value   17-7   0 
 error_value   20-7   0 
 error_value   19-11   0 
 error_value   18-13   0 
 error_value   19-13   0 
 error_value   18-14   0 
 error_value   19-14   0 
 error_value   18-15   0 
 error_value   19-15   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   12-18   0 
 error_value   8-19   0 
 error_value   9-19   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   12-19   0 
 error_value   10-20   0 
 error_value   11-20   0 
 error_value   10-22   0 
 error_value   12-22   0 
 error_value   10-23   0 
